<resources>
    <string name="app_name">RentCar</string>
    <string name="step_basic_title">Step 1: Basic</string>
    <string name="step_details_title">Step 2: Add Car Details</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_back">BACK</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="hint_license_plate">License Plate * (EX: 49F-123.56)</string>
    <string name="hint_brand_name">Brand name *</string>
    <string name="hint_model">Model *</string>
    <string name="hint_production_year">Production Year *</string>
    <string name="hint_number_of_seats">Number of Seats *</string>
    <string name="label_transmission">Transmission: *</string>
    <string name="label_fuel">Fuel: *</string>
    <string name="radio_automatic">AUTOMATIC</string>
    <string name="radio_manual">MANUAL</string>
    <string name="radio_gasoline">GASOLINE</string>
    <string name="radio_diesel">DIESEL</string>
    <string name="section_documents">Documents</string>
    <string name="btn_select_registration">Select Registration paper *</string>
    <string name="btn_select_inspection">Select Certificate of inspection *</string>
    <string name="btn_select_insurance">Select Insurance *</string>
    <string name="hint_color">Color of the car *</string>
    <string name="label_registration_paper">Registration paper: *</string>
    <string name="label_certificate_of_inspection">Certificate of inspection: *</string>
    <string name="label_insurance">Insurance: *</string>
    <string name="hint_mileage">Mileage * (km)</string>
    <string name="hint_fuel_consumption">Fuel Consumption (L/100 km)</string>
    <string name="section_address">Address</string>
    <string name="hint_city_province">City/Province *</string>
    <string name="hint_district">District *</string>
    <string name="hint_ward">Ward *</string>
    <string name="label_city_province">City/Province *</string>
    <string name="label_district">District *</string>
    <string name="label_ward">Ward *</string>
    <string name="hint_house_street">House number, Street *</string>
    <string name="hint_description">Description</string>
    <string name="section_additional_functions">Additional Functions</string>
    <string name="section_images">Images: *</string>
    <string name="image_front">Front: *</string>
    <string name="image_back">Back: *</string>
    <string name="image_left">Left: *</string>
    <string name="image_right">Right: *</string>
    <string name="checkbox_bluetooth">Bluetooth</string>
    <string name="checkbox_sun_roof">Sun roof</string>
    <string name="checkbox_dvd">DVD</string>
    <string name="checkbox_gps">GPS</string>
    <string name="checkbox_child_lock">Child lock</string>
    <string name="checkbox_usb">USB</string>
    <string name="checkbox_camera">Camera</string>
    <string name="checkbox_child_lock_2">Child lock</string>
    <string name="note_image_upload">Please include full 4 images of your vehicle. File type: jpg, jpeg, png, gif</string>
    <string name="file_select_file">Select file</string>
    <string name="file_selected_placeholder">Selected file: %s</string>
    <string name="step_pricing_title">Step 3: Add Car Pricing</string>
    <string name="label_base_price_intro">Please enter your basePrice (VND/Day)</string>
    <string name="hint_base_price">VND/Day *</string>
    <string name="label_deposit">Required deposit: VND *</string>
    <string name="hint_deposit">Please enter your requiredDeposit (VND)</string>
    <string name="section_terms_of_use">Terms of use</string>
    <string name="checkbox_no_smoking">No smoking</string>
    <string name="checkbox_no_food">No food in car</string>
    <string name="checkbox_no_pet">No pet</string>
    <string name="checkbox_other">Other</string>
    <string name="label_specify_terms">Please specify: *</string>
    <string name="hint_specify_terms">Please enter your terms you want</string>
    <string name="step_finish_title">Step 4: Add Car Finish</string>
    <string name="btn_preview">PREVIEW</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="label_ratings">Ratings:</string>
    <string name="label_no_of_rides">No. of rides:</string>
    <string name="label_price">Price:</string>
    <string name="label_locations">Locations:</string>
    <string name="label_status">Status:</string>
    <string name="close">Close</string>
    <string name="register_account">Register Account</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="toggle_password">Toggle password visibility</string>
    <string name="register">Register</string>
    <string name="terms_text">I have read and agree to the Terms &amp; Conditions and Privacy Policy of Mioto</string>
    <string name="account_type">Account Type</string>
    <string name="customer">Customer</string>
    <string name="car_owner">Car Owner</string>
    <string name="find_ideal_car">Find the ideal car rental for your trip</string>
    <string name="pick_up_location">Pick-up Location</string>
    <string name="select_city_province">Select City/Province</string>
    <string name="select_district">Select District</string>
    <string name="select_ward">Select Ward</string>
    <string name="rental_time">Rental Time</string>
    <string name="pick_up_time">Pick-up Time</string>
    <string name="drop_off_time">Drop-off Time</string>
    <string name="search">Search Cars</string>
    <string name="search_cars">SEARCH</string>
    <string name="no_cars_found">No cars found</string>
    <string name="loading">Loading...</string>
    <string name="cars_found">%1$d %2$s</string>
    <string name="car">car</string>
    <string name="cars">cars</string>
    <string name="car_found">car found</string>
    <string name="cars_found_plural">cars found</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="title_my_cars">My Cars</string>
    <string name="msg_no_cars_found">You have not registered any cars yet.</string>
    <string name="btn_view_more">VIEW DETAILS</string>
    <string name="error_data_load_failed">Failed to load car data. Please try again.</string>
    <string name="car_item_price_format">From %,dđ/day</string>
    <string name="car_item_details_format">Year: %1$d | Status: %2$s | Address: %3$s</string>
    <string name="status_not_verified">NOT VERIFIED</string>
    <string name="status_verified">VERIFIED</string>
    <string name="status_stopped">STOPPED</string>
    <string name="dialog_title_are_you_sure">Are you sure?</string>
    <string name="action_add_car">Add car</string>
    <string name="hint_sort_by">Sort By</string>
    <string name="sort_option_newest">Production year: Newest first</string>
    <string name="sort_option_oldest">Production year: Oldest first</string>
    <string name="sort_option_price_low_high">Price: Low to High</string>
    <string name="sort_option_price_high_low">Price: High to Low</string>
    <string name="title_car_details">Car Details</string>
    <string name="btn_save">Save</string>
    <string name="content_description_warning_icon">Warning icon indicating a status change is about to happen</string>
    <string name="dialog_msg_change_car_status">Do you really want to change the car status?</string>
    <string name="btn_yes_change_it">Yes, change it</string>
    <string name="btn_no_keep_it">No, keep it</string>
    <string name="format_price_day">%sđ/day</string>
    <string name="title_my_rentals">My Rentals</string>
    <string name="msg_waiting_count_format">You have %d waiting-approved bookings!</string>
    <string name="hint_status_filter">Status Filter</string>
    <string name="btn_view_details">Details</string>
    <string name="btn_approve_request">Approve Request</string>
    <string name="btn_reject_request">Reject Request</string>
    <string name="label_number_of_days_format">Number of days: %d</string>
    <string name="label_base_price_format">Base Price: %s/day</string>
    <string name="label_deposit_format">Deposit: %s</string>
    <string name="label_booking_status_format">Booking Status: %s</string>
    <string name="dialog_title_confirm_action">Confirm Action</string>
    <string name="dialog_msg_reject_booking_q">Do you really want to reject this booking?</string>
    <string name="dialog_msg_confirm_booking_q">Are you sure you want to confirm this booking request?</string>
    <string name="btn_yes_reject">Yes, reject it!</string>
    <string name="btn_no_keep">No, keep it</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="label_driving_license">Driving License</string>
    <string name="section_driver_information">Driver\'s Information</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_dob">Date of Birth</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_email">Email</string>
    <string name="label_national_id">National ID No</string>
    <string name="section_pricing_and_terms">Pricing and Terms of Use</string>
    <string name="section_vehicle_documents">Vehicle Registration Documents</string>
    <string name="title_rental_details">Rental Details</string>
    <string name="label_license_plate">License Plate</string>
    <string name="label_color">Color</string>
    <string name="label_brand_name">Brand Name</string>
    <string name="label_model">Model</string>
    <string name="label_production_year">Prod. Year</string>
    <string name="label_number_of_seats">No. of Seats</string>
    <string name="label_fuel_type">Fuel Type</string>
    <string name="label_mileage">Mileage</string>
    <string name="label_fuel_consumption">Fuel Consumption</string>
    <string name="label_base_price">Base Price</string>
    <string name="label_required_deposit">Required Deposit</string>
    <string name="section_description">Description</string>
    <string name="section_additional_function">Additional Functions</string>
    <string name="section_price">Pricing</string>
    <string name="label_doc_name">Name</string>
    <string name="label_doc_note">Note</string>
    <string name="label_doc_link">Link</string>
    <string name="doc_registration_paper">Registration Paper</string>
    <string name="action_view_document">View Document</string>
    <string name="divider_light">#E0E0E0</string>
 <string name="label_mileage_unit">Mileage</string>
    <string name="label_fuel_consumption_unit">Fuel Consumption</string>
    <string name="label_no_of_seats">No of seats</string>
    <string name="title_car_owner_dashboard">car owner main</string>
    <string name="title_settings">Settings</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="forgot_password_instruction">Enter your email address. We will send you a link to reset your password.</string>
    <string name="email_hint">Email Address</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">Back to Login</string>
    <string name="change_password_title">Change Password</string>
    <string name="old_password">Old Password *</string>
    <string name="enter_old_password">Enter your current password</string>
    <string name="new_password">New Password *</string>
    <string name="enter_new_password">Enter new password (min. 9 characters)</string>
    <string name="confirm_new_password">Confirm Password *</string>
    <string name="confirm_new_password_hint">Re-enter new password</string>
    <string name="save_changes">SAVE CHANGES</string>
</resources>