<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mileage">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_fuel_consumption">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_fuel_consumption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_address"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city_province">
            <AutoCompleteTextView
                android:id="@+id/select_city_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:drawableEnd="@drawable/ic_arrow_drop_down_24" tools:ignore="HardcodedText,RtlCompat" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_district">
            <AutoCompleteTextView
                android:id="@+id/select_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:drawableEnd="@drawable/ic_arrow_drop_down_24" tools:ignore="RtlCompat" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_ward">
            <AutoCompleteTextView
                android:id="@+id/select_ward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:drawableEnd="@drawable/ic_arrow_drop_down_24" tools:ignore="RtlCompat" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_house_street">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_full_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_description">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:gravity="top" />
        </com.google.android.material.textfield.TextInputLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">

            <include
                android:id="@+id/img_front"
                layout="@layout/item_image_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="8dp" />

            <include
                android:id="@+id/img_back"
                layout="@layout/item_image_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1" />

            <include
                android:id="@+id/img_left"
                layout="@layout/item_image_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp" />

            <include
                android:id="@+id/img_right"
                layout="@layout/item_image_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="16dp" />
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_additional_functions"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"/>

        <GridLayout
            android:id="@+id/grid_functions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">
            <CheckBox android:text="@string/checkbox_bluetooth" />
            <CheckBox android:text="@string/checkbox_sun_roof" />
            <CheckBox android:text="@string/checkbox_dvd" />
            <CheckBox android:text="@string/checkbox_gps" />
            <CheckBox android:text="@string/checkbox_child_lock" />
            <CheckBox android:text="@string/checkbox_usb" />
            <CheckBox android:text="@string/checkbox_camera" />
            <CheckBox android:text="@string/checkbox_child_lock_2" /> </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_images"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_image_upload"
            android:textSize="12sp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:backgroundTint="@color/action_cancel"
                android:layout_marginStart="8dp" />
            <Button
                android:id="@+id/btn_back_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_back"
                android:backgroundTint="@color/action_back"
                android:layout_marginStart="8dp"/>
            <Button
                android:id="@+id/btn_next_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:backgroundTint="@color/action_next_submit"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>