<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginBottom="48dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="4dp" />
    <EditText
        android:id="@+id/inputOldPassword"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:background="@drawable/rounded_edittext_bg"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="4dp" />
    <EditText
        android:id="@+id/inputNewPassword"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:background="@drawable/rounded_edittext_bg"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_password"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="4dp" />
    <EditText
        android:id="@+id/inputConfirmPassword"
        android:hint="@string/confirm_new_password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:background="@drawable/rounded_edittext_bg"
        android:layout_marginBottom="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSavePassword"
        android:text="@string/save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/primary_green"/>
</LinearLayout>